ch9/ch9-suggestions-exercise/iac-macro-usage/tests/fails/bucket_and_no_lambda_name.stderr
error: lambda needs a name
 --> tests/fails/bucket_and_no_lambda_name.rs:5:23
  |
5 |         bucket unique lambda
  |                       ^^^^^^
